# compi

./: .gitignore  Cargo.toml  README.md  compi.toml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  cli.rs  error.rs  execution.rs  main.rs  output.rs  task.rs  util.rs
src/task/: analysis.rs  config.rs  dependency.rs  mod.rs
